fix entity